== Version 2.6.8 Work in progress (not released -- this is a draft) ==

  Users side :
  ------------
    # Apps :
        * Opportunities :
            - Unsetting the current Quote was not possible if you did not create the relationship yourself.

  Developers side :
  -----------------

    Non breaking changes :
    ----------------------
        # The creation forms for HeaderFilter & EntityFilter now accept models with digits at the end of their name.
        # Fix conversion issues in creme.widgets.CheckListSelect when json datatype is enabled.


== Version 2.6.7 ==

  Users side :
  ------------
    # A content visibility issue on popover opening has been fixed.
    # Apps :
        * Creme_config :
            - When you emptied your bricks configuration for "My page" (default or owned)
              with the form, the configuration displayed a ugly "BLOCK" line.
        * Persons :
            - A crash in the view to create a user from a Contact has been fixed.
              It happened when the email of the Contact was used by an existing user.
        * Activities :
            - An issue in calendar configuration, when the end of the day is before the start, has been fixed.

  Developers side :
  -----------------

    Non breaking changes :
    ----------------------
        # The display of 'creme_core.forms.base.CremeEntityForm.forced_relations_info'
          was too much escaped with several relationships.
        # The base form-field 'creme_core.forms.fields.UnionField' did not raise an error
          when a required instance was cleaned with empty sub-data & non required sub-fields.


== Version 2.6.6 ==

  Users side :
  ------------
    # Apps :
        * Persons :
            - In the hat card for Organisations, the field "Legal form" is now inner-edited with the name.
              The field was displayed, but was not editable directly.
        * Billing :